Dirty working Odometer